extra products, similar products pages

--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
                 <span class="nav-item__title">Исключения -</span>
               </button>
               <button class="aside-nav__item nav-item d-flex justify-content-start align-items-center"
-                onclick="tabChange(this); complementaryProductsOpen();">
-                <span class="nav-item__title">Дополняющие товары</span>
+                onclick="tabChange(this); extraProdsOpen();">
+                <span class="nav-item__title">Дополняющие товары -</span>
               </button>
               <button class="aside-nav__item nav-item d-flex justify-content-start align-items-center"
-                onclick="tabChange(this);">
+                onclick="tabChange(this); similarProdsOpen();">
                 <span class="nav-item__title">Товары аналоги -</span>
               </button>
               <button class="aside-nav__item nav-item d-flex justify-content-start align-items-center"
