--- a/src/html/extraProducts.html
+++ b/src/html/extraProducts.html
@@ -11,7 +11,7 @@
             <div class="d-flex justify-content-between mb-3">
                 <button class="equip-filter__toggle" type="button" data-bs-toggle="collapse" aria-expanded="false"
                     aria-controls="filterCollapse" data-bs-target="#filterCollapse">Фильтры <img
-                        src="./public/images/icons/angle.svg" alt="angle" class="equip-filter__toggle-icon"></button>
+                        src="data:image/svg+xml,%3csvg%20width='20'%20height='20'%20viewBox='0%200%2020%2020'%20fill='none'%20xmlns='http://www.w3.org/2000/svg'%3e%3cg%20opacity='0.8'%3e%3cpath%20d='M8%2014L12%2010L8%206'%20stroke='black'%20stroke-linecap='round'%20stroke-linejoin='round'/%3e%3c/g%3e%3c/svg%3e" alt="angle" class="equip-filter__toggle-icon"></button>
                 <form onsubmit="extraProdsDownload(event);" class="d-flex align-items-center">
                     <label class="me-4">
                         <input class="form-check-input" type="radio" name="format" value="xlsx" checked>
