--- a/src/html/equip.html
+++ b/src/html/equip.html
@@ -47,7 +47,7 @@
             </div>
             <div class="col-3 p-3">
               <label for="type" class="d-block form-label">Тип оборудования</label>
-              <input class="form-control" list="typeDatalist" id="type" name="type" placeholder="Имя пользователя">
+              <input class="form-control" list="typeDatalist" id="type" name="type" placeholder="Тип оборудования">
               <datalist id="typeDatalist">
                 <option value="Тип 1">
                 <option value="Тип 2">
@@ -57,8 +57,8 @@
               </datalist>
             </div>
             <div class="col-3 p-3">
-              <label for="userDataList" class="d-block form-label">Группа товаров</label>
-              <input class="form-control" list="groupDatalist" id="group" name="group" placeholder="Имя пользователя">
+              <label for="group" class="d-block form-label">Группа товаров</label>
+              <input class="form-control" list="groupDatalist" id="group" name="group" placeholder="Группа товаров">
               <datalist id="groupDatalist">
                 <option value="Группа 1">
                 <option value="Группа 2">
@@ -69,7 +69,7 @@
             </div>
             <div class="col-3 p-3">
               <label for="unit" class="d-block form-label">Единица измерения</label>
-              <input class="form-control" list="unitDatalist" id="unit" name="unit" placeholder="Имя пользователя">
+              <input class="form-control" list="unitDatalist" id="unit" name="unit" placeholder="Единица измерения">
               <datalist id="unitDatalist">
                 <option value="Единица измерения 1">
                 <option value="Единица измерения 2">
@@ -251,7 +251,7 @@
 
             <label for="userDataList" class="d-block col-5">Группа товаров</label>
             <div class="col-7">
-            <input class="form-control" list="groupDatalist" id="group" name="group" placeholder="Имя пользователя">
+            <input class="form-control" list="groupDatalist" id="group" name="group" placeholder="Группа товаров">
             <datalist id="groupDatalist">
               <option value="Группа 1">
               <option value="Группа 2">
@@ -265,9 +265,9 @@
           <div class="form-group mb-3">
             <div class="row justify-content-between align-items-center">
 
-            <label for="volume" class="d-block col-5">Вместимость/длинна</label>
+            <label for="volume" class="d-block col-5">Вместимость/длина</label>
             <div class="col-7">
-            <input class="form-control" id="volume" name="volume" placeholder="Вместимость/длинна">
+            <input class="form-control" id="volume" name="volume" placeholder="Вместимость/длина">
           </div>
           </div>
           </div>
